refactor: move layout HTML into components and split global CSS into component-scoped styles

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Wakanaka</title>
-        <link rel="icon" type="image/png" sizes="64x64" href="images/logo/make the logo and al.png">
+        <link rel="icon" type="image/png" sizes="64x64" href="./src/images/logo/make the logo and al.png">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Alan+Sans:wght@300..900&family=Baloo+2:wght@400..800&family=Bree+Serif&family=Comfortaa:wght@300..700&family=League+Spartan:wght@100..900&family=Mitr:wght@200;300;400;500;600;700&family=Outfit:wght@100..900&family=Reem+Kufi:wght@400..700&family=Righteous&family=Shrikhand&family=Sora:wght@100..800&display=swap" rel="stylesheet">
